--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"email":{"user":"lkavindu199@gmail.com","pass":"dvrbyyynreqnavga","service":"gmail"}}
+{"email":{"user":"gadgetrx9@gmail.com","pass":"ikarxquqxdpoenix","service":"gmail"}}
