--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.12",
     "path": "^0.12.7",
+    "pusher": "^5.2.0",
     "request": "^2.88.2",
     "stream": "^0.0.2"
   }
